# freefood

./: .gitignore  Cargo.toml  README.md
client/: package.json
client/src/pages/: index.tsx
migrations/: 20230408113127_create_users.sql  20230408114457_create_events.sql  20230408114632_create_events_contributed.sql  20230408114650_create_events_attending.sql  20230408114658_create_following.sql  20230408114708_create_followers.sql  20230410144336_create_events.sql
src/: main.rs
src/bll/: mod.rs
src/commands/: mod.rs
src/config/: mod.rs
src/dal/: event_dal.rs  mod.rs  user_dal.rs
src/models/: event.rs  mod.rs  user.rs
src/repositories/: event_repo.rs  mod.rs  user_repo.rs
src/tests/: mod.rs
src/tests/dal/: event_dal_test.rs  mod.rs
src/utils/: crypto.rs
