[package]
name = "around"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# web framework
actix-web = "4.3.1"
actix-rt = "2.8.0"

# async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.68"

chrono = {version = "0.4.24", features=["serde"]}

# config
dotenv = "0.15.0"

# logging
tracing-actix-web = "0.7"
tracing = "0.1"
tracing-subscriber = {version = "0.3.0", features = ["env-filter"]}

# Parsers and validators
serde = { version = "1.0.159", features = ["derive"]}
sqlx = { version = "0.6.3", features = [ "mysql", "runtime-tokio-native-tls", "chrono" ] }
validator = { version = "0.16", features = ["derive"] }
serde_json = "1.0.84"

jsonwebtoken = "8.3.0"
argonautica = "0.2.0"
uuid = "1.3.1"
